--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
-    /* Général */
     body {
         font-family: 'Roboto', sans-serif;
         margin: 0;
@@ -20,21 +19,14 @@
         margin: 40px auto;
         padding: 30px;
     }
-    h1, h2, h3 {
-        text-align: center;
-    }
+    h1, h2, h3 { text-align: center; }
     h1 { font-size: 2.5em; margin-bottom: 10px; color: #1e3a8a; }
     h2 { font-size: 2em; margin-top: 40px; margin-bottom: 20px; color: #1e40af; }
     h3 { font-size: 1.5em; margin-top: 20px; margin-bottom: 10px; color: #1e3a8a; }
-
-    /* Badges */
+    .material-icons { vertical-align: middle; color: #1e40af; }
     .badges { text-align: center; margin-bottom: 30px; }
     .badges img { margin: 5px; vertical-align: middle; }
-
-    /* Sections */
     .section { margin-bottom: 40px; }
-    
-    /* Cartes */
     .card {
         background: rgba(255,255,255,0.8);
         backdrop-filter: blur(8px);
@@ -48,46 +40,26 @@
         transform: translateY(-5px);
         box-shadow: 0 12px 30px rgba(0,0,0,0.3);
     }
-    .card h3 { display: flex; align-items: center; gap: 10px; }
-    .material-icons { vertical-align: middle; color: #1e40af; }
-
-    /* Liens */
     a { color: #1e40af; text-decoration: none; transition: transform 0.2s; }
     a:hover { transform: scale(1.05); }
-
-    /* Toggle */
     .toggle-content { max-height: 0; overflow: hidden; transition: max-height 0.5s ease; }
     .toggle-btn { cursor: pointer; font-weight: bold; color: #1e40af; text-decoration: underline; display: inline-block; margin-top: 10px; }
-
-    /* Stats */
     .stats img { display: block; margin: 20px auto; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.2); }
-
-    /* Listes */
     ul { padding-left: 20px; }
     li { margin-bottom: 8px; }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-        .container { padding: 20px; }
-    }
+    @media (max-width: 600px) { .container { padding: 20px; } }
 </style>
 </head>
 <body>
 <div class="container">
     <h1>👋 Salut ! Je suis <strong>Salem LUKAU MAKIESE</strong></h1>
-
     <div class="badges">
-        <a href="https://github.com/Peace-Salem">
-            <img src="https://img.shields.io/github/followers/Peace-Salem?label=Follow&style=social" alt="GitHub followers">
-        </a>
-        <a href="https://www.linkedin.com/in/salem-lukau-makiese-3469251b8/">
-            <img src="https://img.shields.io/badge/LinkedIn-Connect-blue?logo=linkedin" alt="LinkedIn">
-        </a>
-        <a href="https://peace-salem.github.io/presentation-salem/">
-            <img src="https://img.shields.io/badge/Portfolio-GitHub%20Pages-1e90ff?logo=github" alt="Portfolio">
-        </a>
+        <a href="https://github.com/Peace-Salem"><img src="https://img.shields.io/github/followers/Peace-Salem?label=Follow&style=social" alt="GitHub followers"></a>
+        <a href="https://www.linkedin.com/in/salem-lukau-makiese-3469251b8/"><img src="https://img.shields.io/badge/LinkedIn-Connect-blue?logo=linkedin" alt="LinkedIn"></a>
+        <a href="https://peace-salem.github.io/presentation-salem/"><img src="https://img.shields.io/badge/Portfolio-GitHub%20Pages-1e90ff?logo=github" alt="Portfolio"></a>
     </div>
 
+    <!-- À propos -->
     <div class="section">
         <h2><span class="material-icons">school</span> À propos de moi</h2>
         <p>Étudiante en <strong>Master 2 MIASHS</strong> – parcours <strong>Actuariat & Ingénierie de Données</strong>, passionnée par la valorisation des données, la modélisation prédictive et le développement d’outils intelligents alliant mathématiques, informatique et finance.</p>
@@ -95,8 +67,10 @@
         <p>🌍 Basée entre <strong>France</strong> et <strong>République Démocratique du Congo</strong>.</p>
     </div>
 
+    <!-- Expériences -->
     <div class="section">
         <h2><span class="material-icons">work</span> Stages & Expériences Clés</h2>
+
         <div class="card">
             <h3><span class="material-icons">folder</span> Flop 15 – GENERALI France (2025)</h3>
             <div class="toggle-content">
@@ -111,27 +85,149 @@
             <span class="toggle-btn">Voir plus</span>
         </div>
 
-        <!-- Ajouter les autres expériences ici de la même manière -->
+        <div class="card">
+            <h3><span class="material-icons">folder</span> Data Scientist – Rawbank RDC (2024)</h3>
+            <div class="toggle-content">
+                <ul>
+                    <li>Exploration et nettoyage de données internes</li>
+                    <li>Détection d’anomalies et modélisation par <strong>régression linéaire</strong></li>
+                    <li>Reporting automatisé en Python</li>
+                </ul>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
 
+        <div class="card">
+            <h3><span class="material-icons">folder</span> Analyse Neurocognitive – CRCM Marseille (2023)</h3>
+            <div class="toggle-content">
+                <ul>
+                    <li>Graphes probabilistes et modèles bayésiens</li>
+                    <li>Analyse des relations cognition-scolarité</li>
+                    <li>Visualisation des réseaux et identification des facteurs influençant l’état neurocognitif</li>
+                </ul>
+                <p>📄 <a href="https://github.com/Peace-Salem/RapportStageEtProjets/blob/main/RapportStage/rapport_stage_crcm.pdf">Télécharger le rapport CRCM</a></p>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
     </div>
 
-    <!-- Projets, compétences, contact, stats… à styliser de la même façon -->
+    <!-- Projets -->
+    <div class="section">
+        <h2><span class="material-icons">code</span> Projets Académiques Marquants</h2>
+
+        <div class="card">
+            <h3><span class="material-icons">insights</span> Analyse de sentiment</h3>
+            <div class="toggle-content">
+                <p>Classification automatique des émotions exprimées dans des tweets via <strong>NLP et Machine Learning</strong> en Python.</p>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
+
+        <div class="card">
+            <h3><span class="material-icons">timeline</span> Optimisation combinatoire</h3>
+            <div class="toggle-content">
+                <p>Planification multi-année de projets avec contraintes budgétaires et coûts non linéaires.</p>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
+
+        <div class="card">
+            <h3><span class="material-icons">shopping_cart</span> Prediction de l'intention d'achat</h3>
+            <div class="toggle-content">
+                <p>Modélisation prédictive du comportement client via <strong>Machine Learning supervisé</strong>.</p>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
+
+        <div class="card">
+            <h3><span class="material-icons">timer</span> Système d’attente – magasin de réparation</h3>
+            <div class="toggle-content">
+                <p>Étude d’un système d’attente réel via processus stochastiques <strong>M/M/1</strong>.</p>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
+
+        <div class="card">
+            <h3><span class="material-icons">sports_esports</span> Jeu de Hex – Java</h3>
+            <div class="toggle-content">
+                <p>Implémentation d’un jeu de stratégie avec IA intégrée (Minimax et heuristiques).</p>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
+
+        <div class="card">
+            <h3><span class="material-icons">folder_open</span> Autres Projets Académiques</h3>
+            <div class="toggle-content">
+                <ul>
+                    <li><a href="https://github.com/Peace-Salem/RapportStageEtProjets/tree/main/ProjetsAcademiques/data_mining_JNNET">Data Mining JNNET</a></li>
+                    <li><a href="https://github.com/Peace-Salem/RapportStageEtProjets/tree/main/ProjetsAcademiques/programmation_contrainte_salle_cours">Programmation contrainte salle cours</a></li>
+                    <li><a href="https://github.com/Peace-Salem/soumission-python">Projet Easy.py</a></li>
+                    <li><a href="https://github.com/Peace-Salem/business-game">Business Game – Simulation d’entreprise</a></li>
+                </ul>
+            </div>
+            <span class="toggle-btn">Voir plus</span>
+        </div>
+    </div>
+
+    <!-- Compétences -->
+    <div class="section">
+        <h2><span class="material-icons">build</span> Compétences techniques</h2>
+        <div class="card">
+            <ul>
+                <li><strong>Langages :</strong> Python, R, SQL, Java, HTML, CSS, PHP</li>
+                <li><strong>Outils & Logiciels :</strong> Git, Power BI, Anaconda, Eclipse, VS Code</li>
+                <li><strong>Data Science & IA :</strong> Machine Learning, Deep Learning (TensorFlow, Keras, PyTorch), MLOps</li>
+                <li><strong>Autres :</strong> Optimisation combinatoire, Graphes probabilistes, Statistiques appliquées</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Objectifs -->
+    <div class="section">
+        <h2><span class="material-icons">flag</span> Objectifs & Centres d’intérêt</h2>
+        <div class="card">
+            <ul>
+                <li>📈 Actuariat & Finance durable</li>
+                <li>🧮 Mathématiques appliquées</li>
+                <li>🤝 Innovation & Impact</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Contact -->
+    <div class="section">
+        <h2><span class="material-icons">contact_mail</span> Contact</h2>
+        <div class="card">
+            <ul>
+                <li>Email : <a href="mailto:salemlukau43@gmail.com">salemlukau43@gmail.com</a></li>
+                <li>LinkedIn : <a href="https://www.linkedin.com/in/salem-lukau-makiese-3469251b8/">Mon Profil LinkedIn</a></li>
+                <li>Portfolio : <a href="https://peace-salem.github.io/presentation-salem/">GitHub Pages – Présentation</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Stats GitHub -->
+    <div class="section stats">
+        <h2><span class="material-icons">bar_chart</span> Statistiques GitHub</h2>
+        <img src="https://github-readme-stats.vercel.app/api?username=Peace-Salem&show_icons=true&theme=radical" alt="GitHub stats">
+        <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Peace-Salem&layout=compact&theme=radical" alt="Top Langs">
+    </div>
 </div>
 
 <script>
-    const toggles = document.querySelectorAll('.toggle-btn');
-    toggles.forEach(btn => {
-        btn.addEventListener('click', () => {
-            const content = btn.previousElementSibling;
-            if(content.style.maxHeight){
-                content.style.maxHeight = null;
-                btn.textContent = "Voir plus";
-            } else {
-                content.style.maxHeight = content.scrollHeight + "px";
-                btn.textContent = "Voir moins";
-            }
-        });
+const toggles = document.querySelectorAll('.toggle-btn');
+toggles.forEach(btn => {
+    btn.addEventListener('click', () => {
+        const content = btn.previousElementSibling;
+        if(content.style.maxHeight){
+            content.style.maxHeight = null;
+            btn.textContent = "Voir plus";
+        } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+            btn.textContent = "Voir moins";
+        }
     });
+});
 </script>
 </body>
 </html>
