--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- À propos -->
     <div class="section">
         <h2><span class="material-icons">school</span> À propos de moi</h2>
-        <p>Étudiante en <strong>Master 2 MIASHS</strong> – parcours <strong>Actuariat & Ingénierie de Données</strong>, passionnée par la valorisation des données, la modélisation prédictive et le développement d’outils intelligents alliant mathématiques, informatique et finance.</p>
+        <p>Étudiante en <strong>Master 2 Mathématiques et Informatique Appliquées aux Sciences Humaines et Sociales(MIASHS)</strong> – parcours <strong>Actuariat & Ingénierie de Données</strong>, passionnée par la valorisation des données, la modélisation prédictive et le développement d’outils intelligents alliant mathématiques, informatique et finance.</p>
         <p>💡 Objectif : allier <strong>rigueur scientifique</strong> et <strong>innovation technologique</strong> pour contribuer à des projets à fort impact dans la <strong>data science</strong>, l’<strong>actuariat</strong> et l’<strong>intelligence artificielle</strong>.</p>
         <p>🌍 Basée entre <strong>France</strong> et <strong>République Démocratique du Congo</strong>.</p>
     </div>
@@ -112,48 +112,50 @@
     </div>
 
     <!-- Projets -->
-    <div class="section">
-        <h2><span class="material-icons">code</span> Projets Académiques Marquants</h2>
+<div class="section">
+    <h2><span class="material-icons">code</span> Projets Académiques Marquants</h2>
 
-        <div class="card">
-            <h3><span class="material-icons">insights</span> Analyse de sentiment</h3>
-            <div class="toggle-content">
-                <p>Classification automatique des émotions exprimées dans des tweets via <strong>NLP et Machine Learning</strong> en Python.</p>
-            </div>
-            <span class="toggle-btn">Voir plus</span>
+    <div class="card">
+        <h3><span class="material-icons">insights</span> <a href="https://github.com/Peace-Salem/RapportStageEtProjets/tree/main/ProjetsAcademiques/analyse_de_sentiment" target="_blank">Analyse de sentiment</a></h3>
+        <div class="toggle-content">
+            <p>Classification automatique des émotions exprimées dans des tweets via <strong>NLP et Machine Learning</strong> en Python.</p>
         </div>
+        <span class="toggle-btn">Voir plus</span>
+    </div>
 
-        <div class="card">
-            <h3><span class="material-icons">timeline</span> Optimisation combinatoire</h3>
-            <div class="toggle-content">
-                <p>Planification multi-année de projets avec contraintes budgétaires et coûts non linéaires.</p>
-            </div>
-            <span class="toggle-btn">Voir plus</span>
+    <div class="card">
+        <h3><span class="material-icons">timeline</span> <a href="https://github.com/Peace-Salem/RapportStageEtProjets/tree/main/ProjetsAcademiques/optimisation_combinatoire" target="_blank">Optimisation combinatoire</a></h3>
+        <div class="toggle-content">
+            <p>Planification multi-année de projets avec contraintes budgétaires et coûts non linéaires.</p>
         </div>
+        <span class="toggle-btn">Voir plus</span>
+    </div>
 
-        <div class="card">
-            <h3><span class="material-icons">shopping_cart</span> Prediction de l'intention d'achat</h3>
-            <div class="toggle-content">
-                <p>Modélisation prédictive du comportement client via <strong>Machine Learning supervisé</strong>.</p>
-            </div>
-            <span class="toggle-btn">Voir plus</span>
+    <div class="card">
+        <h3><span class="material-icons">shopping_cart</span> <a href="https://github.com/Peace-Salem/RapportStageEtProjets/tree/main/ProjetsAcademiques/prediction_intention_achat" target="_blank">Prediction de l'intention d'achat</a></h3>
+        <div class="toggle-content">
+            <p>Modélisation prédictive du comportement client via <strong>Machine Learning supervisé</strong>.</p>
         </div>
+        <span class="toggle-btn">Voir plus</span>
+    </div>
 
-        <div class="card">
-            <h3><span class="material-icons">timer</span> Système d’attente – magasin de réparation</h3>
-            <div class="toggle-content">
-                <p>Étude d’un système d’attente réel via processus stochastiques <strong>M/M/1</strong>.</p>
-            </div>
-            <span class="toggle-btn">Voir plus</span>
+    <div class="card">
+        <h3><span class="material-icons">timer</span> <a href="https://github.com/Peace-Salem/RapportStageEtProjets/tree/main/ProjetsAcademiques/stochastique_temps_entente" target="_blank">Système d’attente – magasin de réparation</a></h3>
+        <div class="toggle-content">
+            <p>Étude d’un système d’attente réel via processus stochastiques <strong>M/M/1</strong>.</p>
         </div>
+        <span class="toggle-btn">Voir plus</span>
+    </div>
 
-        <div class="card">
-            <h3><span class="material-icons">sports_esports</span> Jeu de Hex – Java</h3>
-            <div class="toggle-content">
-                <p>Implémentation d’un jeu de stratégie avec IA intégrée (Minimax et heuristiques).</p>
-            </div>
-            <span class="toggle-btn">Voir plus</span>
+    <div class="card">
+        <h3><span class="material-icons">sports_esports</span> <a href="https://github.com/Peace-Salem/RapportStageEtProjets/tree/main/ProjetsAcademiques/jeu_hex" target="_blank">Jeu de Hex – Java</a></h3>
+        <div class="toggle-content">
+            <p>Implémentation d’un jeu de stratégie avec IA intégrée (Minimax et heuristiques).</p>
         </div>
+        <span class="toggle-btn">Voir plus</span>
+    </div>
+</div>
+
 
         <div class="card">
             <h3><span class="material-icons">folder_open</span> Autres Projets Académiques</h3>
@@ -231,3 +233,4 @@ toggles.forEach(btn => {
 </script>
 </body>
 </html>
+
