--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h2><span class="material-icons">work</span> Stages & Expériences Clés</h2>
 
         <div class="card">
-            <h3><span class="material-icons">folder</span> Flop 15 – GENERALI France (2025)</h3>
+            <h3><span class="material-icons">folder</span> Technicien d'Actuariat – GENERALI France (2025)</h3>
             <div class="toggle-content">
                 <ul>
                     <li>Nettoyage et traitement des données de contrats d’assurance</li>
@@ -233,5 +233,6 @@ toggles.forEach(btn => {
 </script>
 </body>
 </html>
+
 
 
